# Clock

./: .gitignore  CMakeLists.txt  README.md
docs/en-us/: readme.md
docs/zh-cn/: readme.md
res/: resources.qrc
res/icon/: app.rc
res/stylesheet/: style.css
src/: main.cxx
src/mainwindow/: mainwindow.cxx  mainwindow.hxx
